automatically merged revision 1075245: - Make sure to cancel non-POST XHR jobs when the related document object is destroyed. (#160087) - Related to this, don't crash trying to emit events when we get to changeState w/o a doc (#187597, #214584, #213987, #201053). Also add some paranoia about that for the methods. - Handle encoding inside mimetype overrides. (Some demo by Mr. Strigi).

BUG: 160087
BUG: 187597
BUG: 214584
BUG: 213987
BUG: 201053

svn path=/branches/KDE/4.4/kdelibs/; revision=1075253